src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_query_inspect_empty_strings.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
               ╭  Query Details  [j/k] scroll  [y] copy query  [C] cancel  [K] kill ╮               
               │                                                                    │               
               │  Connection ────────────────────────────────────────               │               
               │  PID:       4     User:      DB:                                   │               
               │  Backend:                                                          │               
               │                                                                    │               
               │  Status ────────────────────────────────────────                   │               
               │  State:            Duration: 0s                                    │               
               │  Wait:       /                                                     │               
               │                                                                    │               
               │  Query ────────────────────────────────────────                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               ╰────────────────────────────────────────────────────────────────────╯
