src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_query_inspect_no_selection.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
               ╭  Query Details  [j/k] scroll  [y] copy query  [C] cancel  [K] kill ╮               
               │Query no longer exists                                              │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               ╰────────────────────────────────────────────────────────────────────╯
