src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_query_inspect_unicode.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
               ╭ 🔍  Query Details  [j/k] scroll  [y] copy query  [C] cancel  [K] kil╮               
               │                                                                    │               
               │  Connection ────────────────────────────────────────               │               
               │  PID:       12345     User: 用 户      DB: デ ー タ ベ ー ス               │               
               │  Backend:   client backend                                         │               
               │                                                                    │               
               │  Status ────────────────────────────────────────                   │               
               │  State:      idle in transaction      Duration: 1ms                │               
               │  Wait:      - / -                                                  │               
               │                                                                    │               
               │  Query ────────────────────────────────────────                    │               
               │  SELECT * FROM users WHERE name = '日 本 語 テ ス ト ' AND emoji =       │               
               │'🎉 🚀 💻 '                                                            │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               │                                                                    │               
               ╰────────────────────────────────────────────────────────────────────╯
