src/ui/snapshots/pg_glimpse__ui__snapshot_tests__overlay_settings_inspect.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                    ╭ ⚙️  Setting Details ──────────────────────────────────────╮                    
                    │                                                          │                    
                    │  Setting ────────────────────────────────────────        │                    
                    │  Name:        shared_buffers                             │                    
                    │  Value:       128MB                                      │                    
                    │  Unit:        8kB                                        │                    
                    │                                                          │                    
                    │  Category ────────────────────────────────────────       │                    
                    │  Category:    Resource Usage / Memory                    │                    
                    │                                                          │                    
                    │  Description ────────────────────────────────────────    │                    
                    │  Sets the number of shared memory buffers used by the    │                    
                    │server.                                                   │                    
                    │                                                          │                    
                    │  Configuration ────────────────────────────────────────  │                    
                    │  Context:     postmaster                                 │                    
                    │  Source:      configuration file                         │                    
                    │  To Apply:    Server restart required                    │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    ╰──────────────────────────────────────────────────────────╯
